<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_connect"
        android:contentDescription="@string/content_description_connect"
        android:icon="@drawable/ic_baseline_alt_route_24"
        android:title="@string/connect_device"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/mnu_send"
        android:contentDescription="@string/content_description_upload_config"
        android:icon="@drawable/ic_baseline_input_24"
        android:title="@string/upload_config"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/mnu_share"
        android:contentDescription="@string/content_description_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/mnu_help"
        android:contentDescription="@string/content_description_help"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/help"
        app:showAsAction="always|withText" />


</menu>