<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recordingSettingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".radiobutton.RadioButton5">

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separation_thickness"
            android:layout_marginTop="16dp"
            android:background="@color/xanadu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_sample_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rdgSampleRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25">

            <RadioButton
                android:id="@+id/rb8hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz8" />

            <RadioButton
                android:id="@+id/rb16hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz16" />

            <RadioButton
                android:id="@+id/rb32hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz32" />

            <RadioButton
                android:id="@+id/rb48hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz48" />

            <RadioButton
                android:id="@+id/rb96hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz96" />

            <RadioButton
                android:id="@+id/rb192hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz192" />

            <RadioButton
                android:id="@+id/rb250hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz250" />

            <RadioButton
                android:id="@+id/rb384hz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/hz384" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_filter_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:text="@string/tv_gain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdgSampleRate" />

        <RadioGroup
            android:id="@+id/rdgGain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/divider7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_filter_type">

            <RadioButton
                android:id="@+id/rbZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/low" />

            <RadioButton
                android:id="@+id/rbOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rbTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/med" />

            <RadioButton
                android:id="@+id/rbThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rbFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:text="@string/high" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/divider7"
            app:layout_constraintTop_toBottomOf="@+id/divider7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckbEnableCyclingRecording" />

            <CheckBox
                android:id="@+id/chk_enable_duty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sleep_duration" />

            <EditText
                android:id="@+id/edtxnuSleepDuration"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:enabled="true"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_recording_duration" />

            <EditText
                android:id="@+id/edtxnuRecordingDuration"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="true"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout6"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckbEnableLed" />

            <CheckBox
                android:id="@+id/ckbEnableLed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:clickable="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckbEnableLowVoltageCutOff" />

            <CheckBox
                android:id="@+id/ckbEnableLowVoltageCutOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:clickable="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/ckbEnableBatteryLevelIndication"
                android:text="@string/ckbEnableBatteryLevelIndication" />

            <CheckBox
                android:id="@+id/ckbEnableBatteryLevelIndication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:clickable="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_ec_rec_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:lines="5"
            android:text="lorem ipsum"
            app:layout_constraintStart_toStartOf="@+id/linearLayout7"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <TextView
            android:id="@+id/txv_placeholder_rec_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="12"
            android:text=" "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_ec_rec_set"
            app:layout_constraintTop_toBottomOf="@+id/tv_ec_rec_set" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separation_thickness"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/xanadu"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separation_thickness"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/xanadu"
            app:layout_constraintBottom_toBottomOf="@+id/rdgGain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdgGain" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


